--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,13 +10,16 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="#">Experience</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#">Motivation</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">CV|Resume</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
