--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,16 +10,19 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Education</a>
+        <a class="nav-link" href="#education">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Experience</a>
+        <a class="nav-link" href="#experience">Experience</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Motivation</a>
+        <a class="nav-link" href="#certifications">Certifications</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">CV|Resume</a>
+        <a class="nav-link" href="#motivation">Motivation</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#cv">CV|Resume</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
