--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
         <a class="nav-link" href="#motivation">Motivation</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/attachment/CV_EN_Elia_Bellussi.pdf">CV|Resume</a>
+        <a class="nav-link" target="_blank" href="/attachment/CV_EN_Elia_Bellussi.pdf">CV|Resume</a>
       </li>
     </ul>
   </div>
