--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,10 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <div class="collapse navbar-collapse" id="navbarColor01">
+    <ul class="navbar-nav mr-auto">
+    </ul>
+  </div>
   <div class="collapse navbar-collapse order-3" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
