--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <ul class="navbar-nav mr-auto">
     </ul>
   </div>
-  <div class="collapse navbar-collapse order-3" id="navbarColor01">
+  <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home</a>
