--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,24 +1,22 @@
 <div class="jumbotron">
-  <h1 class="display-3">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <h1 class="display-3">Elia Bellussi</h1>
+  <p class="lead">Design Thinking | Scenario Planning | Open Innovation | Data Strategy and Analytics</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p>To download my cv - resume - click the button below.</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" href="#" role="button">CV | Resume</a>
   </p>
 </div>
 
 <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
-  <div class="card-header">Header</div>
+  <div class="card-header">Business</div>
   <div class="card-body">
-    <h4 class="card-title">Primary card title</h4>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h4 class="card-title">Impact Angels Italia</h4>
+    <p class="card-text">Evaluating and helping start-ups to enter in the market</p>
   </div>
-</div>
-<div class="card text-white bg-secondary mb-3" style="max-width: 20rem;">
-  <div class="card-header">Header</div>
+  <div class="card-header">Business</div>
   <div class="card-body">
-    <h4 class="card-title">Secondary card title</h4>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h4 class="card-title">VoiceMed</h4>
+    <p class="card-text">Business Analysis and Software Development</p>
   </div>
 </div>
