--- a/_includes/main.html
+++ b/_includes/main.html
@@ -19,4 +19,9 @@
     <h4 class="card-title">VoiceMed</h4>
     <p class="card-text">Business Analysis and Software Development</p>
   </div>
+  <div class="card-header">Business</div>
+  <div class="card-body">
+    <h4 class="card-title">Digital360</h4>
+    <p class="card-text">Contributing Writer about Design Thinking, Data Strategy, Scenario Planning</p>
+  </div>
 </div>
