--- a/_includes/main.html
+++ b/_includes/main.html
@@ -4,7 +4,7 @@
   <hr class="my-4">
   <p>To download my cv - resume - click the button below.</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" target="_blank" href="/attachment/CV_EN_Elia_Bellussi.pdf" role="button">CV | Resume</a>
+    <a class="btn btn-primary btn-lg" target="_blank" href="/attachment/CV_EN_Elia_Bellussi.pdf"" role="button">CV | Resume</a>
   </p>
 </div>
 
