--- a/_includes/main.html
+++ b/_includes/main.html
@@ -9,6 +9,11 @@
 </div>
 
 <div class="row">
+  <div class="col-lg-12">
+    <h2>Work Experience</h2>
+  </div>
+</div>
+<div class="row">
   <div class="col-lg-4">
     <div class="card-header">Business</div>
     <div class="card-body">
