--- a/_includes/main.html
+++ b/_includes/main.html
@@ -36,3 +36,27 @@
     </div>
   </div>
 </div>
+                          
+<div class="row">
+  <div class="col-lg-12">
+    <h2>My Profile</h2>
+  </div>
+</div>             
+<div class="row">
+  <div class="col-lg-4">
+      <ul class="list-group">
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        E-mail:
+        <span class="badge badge-primary badge-pill">e.bellussi@gmail.com</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        Mobile Phone:
+        <span class="badge badge-primary badge-pill">+39 333 6892117</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        Mobile Phone: 
+        <span class="badge badge-primary badge-pill">+44 7775 701751</span>
+      </li>
+    </ul>
+  </div>
+</div>                                             
