--- a/_includes/main.html
+++ b/_includes/main.html
@@ -59,4 +59,22 @@
       </li>
     </ul>
   </div>
+  <div class="col-lg-4">
+    <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+      <div class="card-header">LinkedIn</div>
+      <div class="card-body">
+        <h4 class="card-title">Link me on</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card text-white bg-info mb-3" style="max-width: 20rem;">
+      <div class="card-header">Twitter</div>
+      <div class="card-body">
+        <h4 class="card-title">Tweet me on</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+</div>
+  </div>
 </div>                                             
