--- a/_includes/main.html
+++ b/_includes/main.html
@@ -39,7 +39,7 @@
                           
 <div class="row">
   <div class="col-lg-12">
-    <h2>My Profile</h2>
+    <h2>Contact Me</h2>
   </div>
 </div>             
 <div class="row">
