links in main page

--- a/_includes/main.html
+++ b/_includes/main.html
@@ -63,7 +63,7 @@
     <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
       <div class="card-header">LinkedIn</div>
       <div class="card-body">
-        <h4 class="card-title">Link me on</h4>
+        <h4 class="card-title">Link me <a href="https://www.linkedin.com/in/eliabellussi/" target="_blank">here</a></h4>
       </div>
     </div>
   </div>
@@ -71,7 +71,7 @@
     <div class="card text-white bg-info mb-3" style="max-width: 20rem;">
       <div class="card-header">Twitter</div>
       <div class="card-body">
-        <h4 class="card-title">Tweet me on</h4>
+        <h4 class="card-title">Tweet me <a href="https://twitter.com/ebellussi" target="_blank">here</a></h4>
       </div>
 </div>
   </div>
