--- a/_includes/main.html
+++ b/_includes/main.html
@@ -60,16 +60,16 @@
     </ul>
   </div>
   <div class="col-lg-4">
-    <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
-      <div class="card-header">LinkedIn</div>
+    <div class="card " style="max-width: 20rem;">
+      <div class="card-header text-white bg-primary mb-3">LinkedIn</div>
       <div class="card-body">
         <h4 class="card-title">Link me <a href="https://www.linkedin.com/in/eliabellussi/" target="_blank">here</a></h4>
       </div>
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card text-white bg-info mb-3" style="max-width: 20rem;">
-      <div class="card-header">Twitter</div>
+    <div class="card" style="max-width: 20rem;">
+      <div class="card-header text-white bg-info mb-3">Twitter</div>
       <div class="card-body">
         <h4 class="card-title">Tweet me <a href="https://twitter.com/ebellussi" target="_blank">here</a></h4>
       </div>
