--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,19 +6,19 @@
   <div class="collapse navbar-collapse mr-auto navbar-right" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="main.html">Home</a>
+        <a class="nav-link" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="education.html">Education</a>
+        <a class="nav-link" href="#education">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="experience.html">Experience</a>
+        <a class="nav-link" href="#experience">Experience</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="certifications.html">Certifications</a>
+        <a class="nav-link" href="#certifications">Certifications</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="motivation.html">Motivation</a>
+        <a class="nav-link" href="#motivation">Motivation</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" target="_blank" href="/attachment/CV_EN_Elia_Bellussi.pdf">CV|Resume</a>
