--- a/_includes/main.html
+++ b/_includes/main.html
@@ -36,6 +36,35 @@
     </div>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-lg-12">
+    <h2>Education</h2>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-4">
+    <div class="card-header">MSc in Disruptive Innovation</div>
+    <div class="card-body">
+      <h4 class="card-title">HULT International Business School</h4>
+      <p class="card-text">2019-2020: 3.61/4 with distinction</p>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card-header">Master of Business Administration</div>
+    <div class="card-body">
+      <h4 class="card-title">HULT International Business School</h4>
+      <p class="card-text">2018-2019: 3.26/4 - Track on Project Management and Marketing & Sales</p>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card-header">BSc in Computer Science</div>
+    <div class="card-body">
+      <h4 class="card-title">Università di Torino</h4>
+      <p class="card-text">2002-2011: 88/100 - Thesis on Multi Agent System</p>
+    </div>
+  </div>
+</div>
                           
 <div class="row">
   <div class="col-lg-12">
