--- a/_includes/main.html
+++ b/_includes/main.html
@@ -47,21 +47,67 @@
     <div class="card-header">MSc in Disruptive Innovation</div>
     <div class="card-body">
       <h4 class="card-title">HULT International Business School</h4>
-      <p class="card-text">2019-2020: 3.61/4 with distinction</p>
+      <p class="card-text">Sep 2019 - Mar 2020: GPA 3.61/4 with distinction</p>
     </div>
   </div>
   <div class="col-lg-4">
     <div class="card-header">Master of Business Administration</div>
     <div class="card-body">
       <h4 class="card-title">HULT International Business School</h4>
-      <p class="card-text">2018-2019: 3.26/4 - Track on Project Management and Marketing & Sales</p>
+      <p class="card-text">Sep 2018 - Aug 2019: Track on Project Management and Marketing & Sales</p>
     </div>
   </div>
   <div class="col-lg-4">
     <div class="card-header">BSc in Computer Science</div>
     <div class="card-body">
       <h4 class="card-title">Università di Torino</h4>
-      <p class="card-text">2002-2011: 88/100 - Thesis on Multi Agent System</p>
+      <p class="card-text">Oct 2002 - Oct 2011: Thesis on Multi Agent System</p>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-12">
+    <h2>Experience</h2>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-4">
+    <div class="card-header">Senior System Engineer</div>
+    <div class="card-body">
+      <h4 class="card-title">Consoft Sistemi S.p.A.</h4>
+      <p class="card-text">Product Management, Project Management, Process Design & Management</p>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card-header">Corporate Business Solution Manager</div>
+    <div class="card-body">
+      <h4 class="card-title">Consoft Sistemi S.p.A.</h4>
+      <p class="card-text">Big Data and Analytics</p>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card-header">Guest Lecturer</div>
+    <div class="card-body">
+      <h4 class="card-title">Comau S.p.A. - ESCP Business School</h4>
+      <p class="card-text">How coding could impact managerial roles</p>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-4">
+    <div class="card-header">Contributing Writer</div>
+    <div class="card-body">
+      <h4 class="card-title">Gruppo Digital360</h4>
+      <p class="card-text">Articles on Design Thinking, Data Strategy and Scenario Planning</p>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card-header">Software Solution Architect</div>
+    <div class="card-body">
+      <h4 class="card-title">VoiceMed</h4>
+      <p class="card-text">Web and App Development</p>
     </div>
   </div>
 </div>
