--- a/_includes/main.html
+++ b/_includes/main.html
@@ -37,6 +37,12 @@
   </div>
 </div>
 
+<div class="alert alert-dismissible alert-warning">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <h4 class="alert-heading">Discover me</h4>
+  <p class="mb-0">Passionate about technology with 9+ years of experience: working in relationship management, system engineering and project management with stakeholders and clients such as GE Avio Aero, Intesa Sanpaolo, Eutelsat.</p>
+</div>
+
 <div class="row">
   <div class="col-lg-12">
     <h2>Education</h2>
@@ -111,6 +117,23 @@
     </div>
   </div>
 </div>
+
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Title</th>
+      <th scope="col">Institute</th>
+      <th scope="col">Issued</th>
+      <th scope="col">Expiration</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Innovation Management</th>
+      <td>Erasmus Universitet </td>
+      <td>Column content</td>
+      <td>Column content</td>
+    </tr>
                           
 <div class="row">
   <div class="col-lg-12">
