--- a/_includes/main.html
+++ b/_includes/main.html
@@ -37,10 +37,11 @@
   </div>
 </div>
 
-<div class="alert alert-dismissible alert-warning">
-  <button type="button" class="close" data-dismiss="alert">&times;</button>
-  <h4 class="alert-heading">Discover me</h4>
-  <p class="mb-0">Passionate about technology with 9+ years of experience: working in relationship management, system engineering and project management with stakeholders and clients such as GE Avio Aero, Intesa Sanpaolo, Eutelsat.</p>
+<div class="card text-white bg-primary mb-3">
+  <div class="card-header">Discover me</div>
+  <div class="card-body">
+    <p class="card-text">Passionate about technology with 9+ years of experience: working in relationship management, system engineering and project management with stakeholders and clients such as GE Avio Aero, Intesa Sanpaolo, Eutelsat.</p>
+  </div>
 </div>
 
 <div class="row">
