--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,19 +6,19 @@
   <div class="collapse navbar-collapse mr-auto navbar-right" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#">Home</a> (#home)
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#education">Education</a>
+        <a class="nav-link" href="#education">Education</a> (#education)
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#experience">Experience</a>
+        <a class="nav-link" href="#experience">Experience</a> (#experience)
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#certifications">Certifications</a>
+        <a class="nav-link" href="#certifications">Certifications</a> (#certifications)
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#motivation">Motivation</a>
+        <a class="nav-link" href="#motivation">Motivation</a> (#motivation)
       </li>
       <li class="nav-item">
         <a class="nav-link" target="_blank" href="/attachment/CV_EN_Elia_Bellussi.pdf">CV|Resume</a>
