--- a/_includes/main.html
+++ b/_includes/main.html
@@ -46,6 +46,7 @@
 
 <div class="row">
   <div class="col-lg-12">
+    <a name="education"></a>
     <h2>Education</h2>
   </div>
 </div>
@@ -76,6 +77,7 @@
 <div class="row">
   <div class="col-lg-12">
     <h2>Experience</h2>
+    <a name="experience"></a>
   </div>
 </div>
 
@@ -119,6 +121,7 @@
   </div>
 </div>
 
+<a name="certifications"></a>
 <table class="table table-hover">
   <thead>
     <tr>
