--- a/_includes/main.html
+++ b/_includes/main.html
@@ -138,6 +138,8 @@
       <td>Column content</td>
       <td>Column content</td>
     </tr>
+  </tbody>
+</table>
                           
 <div class="row">
   <div class="col-lg-12">
