--- a/_includes/main.html
+++ b/_includes/main.html
@@ -121,7 +121,14 @@
   </div>
 </div>
 
-<a name="certifications"></a>
+
+<div class="row">
+  <div class="col-lg-12">
+    <h2>Certifications</h2>
+    <a name="certifications"></a>
+  </div>
+</div>
+
 <table class="table table-hover">
   <thead>
     <tr>
@@ -134,9 +141,17 @@
   <tbody>
     <tr>
       <th scope="row">Innovation Management</th>
-      <td>Erasmus Universitet </td>
-      <td>Column content</td>
-      <td>Column content</td>
+      <td>Erasmus Universiteit Rotterdam</td>
+      <td>April 2020</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row">Innovation Management</th>
+      <td>Erasmus Universiteit Rotterdam</td>
+      <td>April 2020</td>
+      <td>No expiration</td>
     </tr>
   </tbody>
 </table>
