--- a/_includes/main.html
+++ b/_includes/main.html
@@ -148,8 +148,8 @@
   </tbody>
   <tbody>
     <tr>
-      <th scope="row">Innovation Management</th>
-      <td>Erasmus Universiteit Rotterdam</td>
+      <th scope="row">Big Data Specialisation</th>
+      <td>UC Davis</td>
       <td>April 2020</td>
       <td>No expiration</td>
     </tr>
