--- a/_includes/main.html
+++ b/_includes/main.html
@@ -40,14 +40,14 @@
 <div class="card text-white bg-primary mb-3">
   <div class="card-header">Discover me</div>
   <div class="card-body">
-    <p class="card-text">Passionate about technology with 9+ years of experience: working in relationship management, system engineering and project management with stakeholders and clients such as GE Avio Aero, Intesa Sanpaolo, Eutelsat.</p>
+    <p class="card-text">Passionate about technology with 9+ years of experience: working in product management and project management with stakeholders and clients such as GE Avio Aero, Intesa Sanpaolo, Eutelsat.</p>
   </div>
 </div>
 
 <div class="row">
   <div class="col-lg-12">
     <a name="education"></a>
-    <h2>Education</h2>
+    <h1>Education</h1>
   </div>
 </div>
 <div class="row">
@@ -76,7 +76,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <h2>Experience</h2>
+    <h1>Experience</h1>
     <a name="experience"></a>
   </div>
 </div>
@@ -124,7 +124,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <h2>Certifications</h2>
+    <h1>Certifications</h1>
     <a name="certifications"></a>
   </div>
 </div>
@@ -158,7 +158,7 @@
                           
 <div class="row">
   <div class="col-lg-12">
-    <h2>Contact me</h2>
+    <h1>Contact me</h1>
   </div>
 </div>             
 <div class="row">
