--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,10 +18,10 @@
         <a class="nav-link" id="link-cert"  href="#certifications">Certifications</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-art"  href="#certifications">Articles</a>
+        <a class="nav-link" id="link-art"  href="#articles">Articles</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-pres"  href="#certifications">Presentations</a>
+        <a class="nav-link" id="link-pres"  href="#presentation">Presentations</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="link-mot"  href="#motivation">Motivation</a>
