--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,25 +6,25 @@
   <div class="collapse navbar-collapse mr-auto navbar-right" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" id="link-home" href="#">Home</a>
+        <a class="nav-link" id="link-home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-edu" href="#education">Education</a>
+        <a class="nav-link" id="link-edu">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-exp"  href="#experience">Experience</a>
+        <a class="nav-link" id="link-exp">Experience</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-cert"  href="#certifications">Certifications</a>
+        <a class="nav-link" id="link-cert">Certifications</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-art"  href="#articles">Articles</a>
+        <a class="nav-link" id="link-art">Articles</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-pres"  href="#presentation">Presentations</a>
+        <a class="nav-link" id="link-pres">Presentations</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-mot"  href="#motivation">Motivation</a>
+        <a class="nav-link" id="link-mot">Motivation</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" target="_blank" href="/attachment/CV_EN_Elia_Bellussi.pdf">CV|Resume</a>
