--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,52 +1,4 @@
-<script>
-  $(document).ready(function(){
-      $("#link-home").click(function(){
-      $("#container").load("main.html");
-      });
-  });
-  </script>
-  <script>
-  $(document).ready(function(){
-      $("#link-edu").click(function(){
-      $("#container").load("education.html");
-      });
-  });
-  </script>
-  <script>
-  $(document).ready(function(){
-      $("#link-exp").click(function(){
-      $("#container").load("experience.html");
-      });
-  });
-  </script>
-  <script>
-  $(document).ready(function(){
-      $("#link-cert").click(function(){
-      $("#container").load("certifications.html");
-      });
-  });
-  </script>
-  <script>
-  $(document).ready(function(){
-      $("#link-art").click(function(){
-      $("#container").load("articles.html");
-      });
-  });
-  </script>
-  <script>
-  $(document).ready(function(){
-      $("#link-pres").click(function(){
-      $("#container").load("presentations.html");
-      });
-  });
-  </script>
-  <script>
-  $(document).ready(function(){
-      $("#link-mot").click(function(){
-      $("#container").load("motivation.html");
-      });
-  });
-  </script><div class="py-5 border-top">
+<div class="py-5 border-top">
   <div class="container">
     <div class="row">
       <div class="col-sm">
