--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,52 +10,52 @@
   <script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
-	$(document).ready(function(){
-  		$("#link-home").click(function(){
-    	$("#container").load("main.html");
-  		});
-	});
+  $(document).ready(function(){
+      $("#link-home").click(function(){
+      $("#container").load("../_includes/main.html");
+      });
+  });
   </script>
   <script>
-	$(document).ready(function(){
-  		$("#link-edu").click(function(){
-    	$("#container").load("education.html");
-  		});
-	});
+  $(document).ready(function(){
+      $("#link-edu").click(function(){
+      $("#container").load("../_includes/education.html");
+      });
+  });
   </script>
   <script>
-	$(document).ready(function(){
-  		$("#link-exp").click(function(){
-    	$("#container").load("experience.html");
-  		});
-	});
+  $(document).ready(function(){
+      $("#link-exp").click(function(){
+      $("#container").load("_includes/experience.html");
+      });
+  });
   </script>
   <script>
-	$(document).ready(function(){
-  		$("#link-cert").click(function(){
-    	$("#container").load("certifications.html");
-  		});
-	});
+  $(document).ready(function(){
+      $("#link-cert").click(function(){
+      $("#container").load("certifications.html");
+      });
+  });
   </script>
   <script>
-	$(document).ready(function(){
-  		$("#link-art").click(function(){
-    	$("#container").load("articles.html");
-  		});
-	});
+  $(document).ready(function(){
+      $("#link-art").click(function(){
+      $("#container").load("articles.html");
+      });
+  });
   </script>
   <script>
-	$(document).ready(function(){
-  		$("#link-pres").click(function(){
-    	$("#container").load("presentations.html");
-  		});
-	});
+  $(document).ready(function(){
+      $("#link-pres").click(function(){
+      $("#container").load("presentations.html");
+      });
+  });
   </script>
   <script>
-	$(document).ready(function(){
-  		$("#link-mot").click(function(){
-    	$("#container").load("motivation.html");
-  		});
-	});
+  $(document).ready(function(){
+      $("#link-mot").click(function(){
+      $("#container").load("motivation.html");
+      });
+  });
   </script>
 </head>
