--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
     <div class="py-5">
       <div class="container page-content" id="container">
-          {%- include main.html -%}
+          {{ content }}
       </div>
     </div>
 
