--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,28 +6,28 @@
   <div class="collapse navbar-collapse mr-auto navbar-right" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" id="link-home" href="/_includes/main.html">Home</a>
+        <a class="nav-link" id="link-home" href="main.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-edu" href="/_includes/education.html">Education</a>
+        <a class="nav-link" id="link-edu" href="education.html">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-exp" href="/_includes/experience.html">Experience</a>
+        <a class="nav-link" id="link-exp" href="/experience.html">Experience</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-cert" href="/_includes/certifications.html">Certifications</a>
+        <a class="nav-link" id="link-cert" href="/certifications.html">Certifications</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-art" href="/_includes/articles.html">Articles</a>
+        <a class="nav-link" id="link-art" href="/articles.html">Articles</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-pres" href="/_includes/presentations.html">Presentations</a>
+        <a class="nav-link" id="link-pres" href="/presentations.html">Presentations</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-mot" href="/_includes/motivation.html">Motivation</a>
+        <a class="nav-link" id="link-mot" href="/motivation.html">Motivation</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" target="_blank" href="/_includes/attachment/CV_EN_Elia_Bellussi.pdf">CV|Resume</a>
+        <a class="nav-link" target="_blank" href="/attachment/CV_EN_Elia_Bellussi.pdf">CV|Resume</a>
       </li>
     </ul>
   </div>
