--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,10 +6,10 @@
   <div class="collapse navbar-collapse mr-auto navbar-right" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" id="link-home" href="main.html">Home</a>
+        <a class="nav-link" id="link-home" href="/main.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="link-edu" href="education.html">Education</a>
+        <a class="nav-link" id="link-edu" href="/education.html">Education</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="link-exp" href="/experience.html">Experience</a>
