--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,3 +1,7 @@
+---
+title: Main
+---
+
 <div class="jumbotron">
   <h1 class="display-3">Elia Bellussi</h1>
   <p class="lead">Design Thinking | Scenario Planning | Open Innovation | Data Strategy and Analytics</p>
