--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,12 @@
 
     <div class="py-5">
       <div class="container page-content">
-          {{ content }}
+          {% if page = "null" %}
+            {%- include main.html -%}
+          {% else if page = "education.html"}
+            {%- include education.html -%}
+          {% else if page = "experience.html"}
+              {%- include experience.html -%}
       </div>
     </div>
 
