--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,10 @@
   </button>
   <div class="collapse navbar-collapse mr-auto navbar-right" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
-      {% assign mypages = site.pages | sort: "order" %}
-      {% for page in mypages %}
-      <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+      {% for item in site.data.pages.docs %}
+      <li class="{% if item.url == page.url %}active{% endif %}">
+        <a href="{{ item.url }}">{{ item.title }}</a>
+      </li>
       {% endfor %}
       <li class="nav-item">
         <a class="nav-link" target="_blank" href="/attachment/CV_EN_Elia_Bellussi.pdf">CV|Resume</a>
