--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <ul class="navbar-nav mr-auto">
       {% for item in site.data.pages.docs %}
       <li class="{% if item.url == page.url %} active{% endif %}">
-        <a href="{{ item.url }}">{{ item.title }}</a>
+        <a class="navbar-menu" href="{{ item.url }}">{{ item.title }}</a>
       </li>
       {% endfor %}
       <li class="nav-item">
