--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse mr-auto navbar-right" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       {% for item in site.data.pages.docs %}
-      <li class="{% if item.url == page.url %} active{% endif %}">
+      <li class="nav-item {% if item.url == page.url %}active{% endif %}">
         <a class="nav-link" href="{{ item.url }}">{{ item.title }}</a>
       </li>
       {% endfor %}
