--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,8 @@
     <ul class="navbar-nav mr-auto">
       {% for item in site.data.pages.docs %}
       <li class="nav-item {% if item.url == page.url %}active{% endif %}>
-        <a class="nav-link" href="{{ item.url }}">{{ item.title }} - {{ page.url }}</a>
+        <a class="nav-link" href="{{ item.url }}">{{ item.title }}</a>
+        <p>{{ page.url }}</p>
       </li>
       {% endfor %}
       <li class="nav-item">
