--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 
     <div class="py-5">
       <div class="container page-content">
+          {{ page.url }}
           {{ content }}
       </div>
     </div>
