--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
   <div class="collapse navbar-collapse mr-auto navbar-right" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       {% for item in site.data.pages.docs %}
-      <li class="nav-item {% if item.url == page.url %}active{% endif %}">
-        <a class="nav-link" href="{{ item.url }}">{{ item.title }}</a>
-      </li>
+        <li class="{% if item.url == page.url %}active{% endif %}">
+          <a href="{{ item.url }}">{{ item.title }}</a>
+        </li>
       {% endfor %}
       <li class="nav-item">
         <a class="nav-link" target="_blank" href="/attachment/CV_EN_Elia_Bellussi.pdf">CV|Resume</a>
