--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 
     <div class="py-5">
       <div class="container page-content">
-          {{ item.url }}
-          {{ page.url }}
+          <p>Item = {{ item.url }}</p>
+          <p>Page = {{ page.url }}</p>
           {{ content }}
       </div>
     </div>
