--- a/_includes/home.html
+++ b/_includes/home.html
@@ -24,8 +24,8 @@
   <div class="col-lg-4">
     <div class="card-header">Business</div>
     <div class="card-body">
-      <h4 class="card-title">VoiceMed</h4>
-      <p class="card-text">Business Analysis and Software Development</p>
+      <h4 class="card-title">Rinascita Digitale</h4>
+      <p class="card-text">Guest Speaker about Design Thinking, Data Strategy, Scenario Planning</p>
     </div>
   </div>
   <div class="col-lg-4">
