--- a/_includes/home.html
+++ b/_includes/home.html
@@ -17,22 +17,22 @@
   <div class="col-lg-4">
     <div class="card-header">Business</div>
     <div class="card-body">
+      <h4 class="card-title">Almaviva</h4>
+      <p class="card-text">Development of Architectural Solutions</p>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card-header">Business</div>
+    <div class="card-body">
+      <h4 class="card-title">Personal Activity</h4>
+      <p class="card-text">Strategic Consultancy for Startup</p>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card-header">Business</div>
+    <div class="card-body">
       <h4 class="card-title">Impact Angels Italia</h4>
       <p class="card-text">Evaluating and helping start-ups to enter in the market</p>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card-header">Business</div>
-    <div class="card-body">
-      <h4 class="card-title">Rinascita Digitale</h4>
-      <p class="card-text">Guest Speaker about Design Thinking, Data Strategy, Scenario Planning</p>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card-header">Business</div>
-    <div class="card-body">
-      <h4 class="card-title">Digital360</h4>
-      <p class="card-text">Contributing Writer about Design Thinking, Data Strategy, Scenario Planning</p>
     </div>
   </div>
 </div>
