--- a/_includes/home.html
+++ b/_includes/home.html
@@ -2,7 +2,7 @@
   <h1 class="display-3">Elia Bellussi</h1>
   <p class="lead">Design Thinking | Scenario Planning | Open Innovation | Data Strategy and Analytics</p>
   <hr class="my-4">
-  <p>To download my cv - resume - click the button below.</p>
+  <p>To download my cv/resume click the button below.</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" target="_blank" href="/attachment/CV_EN_Elia_Bellussi.pdf" role="button">CV | Resume</a>
   </p>
