--- a/_includes/home.html
+++ b/_includes/home.html
@@ -82,4 +82,13 @@
       </div>
     </div>
   </div>
-</div>                                             
+</div>
+
+<div class="card text-white bg-primary mb-3">
+  <div class="card-header">Donate</div>
+  <div class="card-body">
+    <h4 class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a></h4>
+    <h4 class="card-text">With <a href="https://paypal.me/eliabellussi" target="_blank">Paypal.Me</a></h4>
+    <h4 class="card-text">With Bitcoin at: <a href="#" target="_blank">1DLjo5sCqd4apSsVZoAJjccnrj6EryVDqT</a></h4>
+  </div>
+</div>
