--- a/_includes/home.html
+++ b/_includes/home.html
@@ -84,7 +84,12 @@
   </div>
 </div>
 
-<div class="card text-white bg-primary mb-3">
+<div class="row">
+  <div class="col-lg-12">
+    <h2>Support me</h2>
+  </div>
+</div>    
+<div class="card bg-light mb-3">
   <div class="card-header">Donate</div>
   <div class="card-body">
     <h4 class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a></h4>
