--- a/_includes/home.html
+++ b/_includes/home.html
@@ -89,7 +89,7 @@
     <h2>Support me</h2>
   </div>
 </div>    
-<div class="card bg-light mb-3">
+<div class="card border-light mb-3">
   <div class="card-header">Donate</div>
   <div class="card-body">
     <h4 class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a></h4>
