--- a/_includes/home.html
+++ b/_includes/home.html
@@ -94,6 +94,6 @@
   <div class="card-body">
     <h4 class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a></h4>
     <h4 class="card-text">With <a href="https://paypal.me/eliabellussi" target="_blank">Paypal.Me</a></h4>
-    <p>With Bitcoin at: <a href="#" target="_blank">1DLjo5sCqd4apSsVZoAJjccnrj6EryVDqT</p>
+    <p class="card-text">With Bitcoin at: <a href="#" target="_blank">1DLjo5sCqd4apSsVZoAJjccnrj6EryVDqT</p>
   </div>
 </div>
