--- a/_includes/home.html
+++ b/_includes/home.html
@@ -89,14 +89,9 @@
 </div>
 
 <div class="row">
-  <div class="col-lg-12">
-    <h2>Support me</h2>
-  </div>
-</div> 
-<div class="row">
   <div class="col-lg-12">   
     <div class="card border-light mb-3">
-      <div class="card-header">Donate</div>
+      <div class="card-header">Support me</div>
       <div class="card-body">
         <h4 class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a></h4>
         <h4 class="card-text">With <a href="https://paypal.me/eliabellussi" target="_blank">Paypal.Me</a></h4>
