--- a/_includes/home.html
+++ b/_includes/home.html
@@ -93,9 +93,9 @@
     <div class="card border-light mb-3">
       <div class="card-header">Support me</div>
       <div class="card-body">
-        <h4 class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a></h4>
-        <h4 class="card-text">With <a href="https://paypal.me/eliabellussi" target="_blank">Paypal.Me</a></h4>
-        <p class="card-text">With Bitcoin at: 1DLjo5sCqd4apSsVZoAJjccnrj6EryVDqT</p>
+        <p class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a></h4>
+        With <a href="https://paypal.me/eliabellussi" target="_blank">Paypal.Me</a></h4>
+        With Bitcoin at: 1DLjo5sCqd4apSsVZoAJjccnrj6EryVDqT</p>
       </div>
     </div>
   </div>
