--- a/_includes/home.html
+++ b/_includes/home.html
@@ -92,8 +92,6 @@
 <div class="card border-light mb-3">
   <div class="card-header">Support me</div>
   <div class="card-body">
-    <p class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a></h4>
-    With <a href="https://paypal.me/eliabellussi" target="_blank">Paypal.Me</a></h4>
-    With Bitcoin at: 1DLjo5sCqd4apSsVZoAJjccnrj6EryVDqT</p>
+    <p class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a>, with <a href="https://paypal.me/eliabellussi" target="_blank">Paypal.Me</a> or with Bitcoin at: 1DLjo5sCqd4apSsVZoAJjccnrj6EryVDqT</p>
   </div>
 </div>
