--- a/_includes/home.html
+++ b/_includes/home.html
@@ -88,6 +88,10 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col-lg-12">
+  </div>
+</div>  
 <div class="card mb-3">
   <h3 class="card-header">Support me</h3>
   <div class="card-body">
