--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -41,9 +41,9 @@ $yiq-contrasted-threshold: 200 !default;
 
 // Components
 
-$border-radius:               0px !default;
-$border-radius-lg:            0px !default;
-$border-radius-sm:            0px !default;
+$border-radius:               .4rem !default;
+$border-radius-lg:            .6rem !default;
+$border-radius-sm:            .3rem !default;
 
 // Fonts
 
