--- a/_includes/home.html
+++ b/_includes/home.html
@@ -15,24 +15,30 @@
 </div>
 <div class="row">
   <div class="col-lg-4">
-    <div class="card-header">Business</div>
-    <div class="card-body">
-      <h4 class="card-title">Almaviva</h4>
-      <p class="card-text">Development of Architectural Solutions</p>
+      <div class="card">
+      <div class="card-header">Business</div>
+      <div class="card-body">
+        <h4 class="card-title">Almaviva</h4>
+        <p class="card-text">Development of Architectural Solutions</p>
+      </div>
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card-header">Business</div>
-    <div class="card-body">
-      <h4 class="card-title">Personal Activity</h4>
-      <p class="card-text">Strategic Consultancy for Startup</p>
+    <div class="card">
+      <div class="card-header">Business</div>
+      <div class="card-body">
+        <h4 class="card-title">Personal Activity</h4>
+        <p class="card-text">Strategic Consultancy for Startup</p>
+      </div>
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card-header">Business</div>
-    <div class="card-body">
-      <h4 class="card-title">Impact Angels Italia</h4>
-      <p class="card-text">Evaluating and helping start-ups to enter in the market</p>
+    <div class="card">
+      <div class="card-header">Business</div>
+      <div class="card-body">
+        <h4 class="card-title">Impact Angels Italia</h4>
+        <p class="card-text">Evaluating and helping start-ups to enter in the market</p>
+      </div>
     </div>
   </div>
 </div>
