--- a/_includes/home.html
+++ b/_includes/home.html
@@ -37,7 +37,7 @@
       <div class="card-header">Business</div>
       <div class="card-body">
         <h4 class="card-title">Impact Angels Italia</h4>
-        <p class="card-text">Evaluating and helping start-ups to enter in the market</p>
+        <p class="card-text">Evaluating and helping start-ups</p>
       </div>
     </div>
   </div>
