--- a/_includes/home.html
+++ b/_includes/home.html
@@ -15,7 +15,7 @@
 </div>
 <div class="row">
   <div class="col-lg-4">
-      <div class="card">
+      <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
         <h4 class="card-title">Almaviva</h4>
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card">
+    <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
         <h4 class="card-title">Personal Activity</h4>
@@ -33,7 +33,7 @@
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card">
+    <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
         <h4 class="card-title">Impact Angels Italia</h4>
@@ -89,7 +89,7 @@
     </ul>
   </div>
   <div class="col-lg-4">
-    <div class="card " style="max-width: 20rem;">
+    <div class="card mb-3" style="max-width: 20rem;">
       <div class="card-header text-white bg-primary mb-3">LinkedIn</div>
       <div class="card-body">
         <h4 class="card-title">Link me <a href="https://www.linkedin.com/in/eliabellussi/" target="_blank">here</a></h4>
@@ -97,7 +97,7 @@
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card" style="max-width: 20rem;">
+    <div class="card mb-3" style="max-width: 20rem;">
       <div class="card-header text-white bg-info mb-3">Twitter</div>
       <div class="card-body">
         <h4 class="card-title">Tweet me <a href="https://twitter.com/ebellussi" target="_blank">here</a></h4>
