--- a/_includes/home.html
+++ b/_includes/home.html
@@ -73,7 +73,7 @@
 </div>             
 <div class="row">
   <div class="col-lg-4">
-    <div class="card mb-3" style="max-width: 20rem;">
+    <div class="card mb-3">
       <ul class="list-group">
         <li class="list-group-item d-flex justify-content-between align-items-center">
           E-mail:
@@ -91,16 +91,16 @@
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card mb-3" style="max-width: 20rem;">
-      <div class="card-header text-white bg-primary mb-3">LinkedIn</div>
+    <div class="card mb-3">
+      <div class="card-header text-white bg-primary">LinkedIn</div>
       <div class="card-body">
         <h4 class="card-title">Link me <a href="https://www.linkedin.com/in/eliabellussi/" target="_blank">here</a></h4>
       </div>
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card mb-3" style="max-width: 20rem;">
-      <div class="card-header text-white bg-info mb-3">Twitter</div>
+    <div class="card mb-3">
+      <div class="card-header text-white bg-info">Twitter</div>
       <div class="card-body">
         <h4 class="card-title">Tweet me <a href="https://twitter.com/ebellussi" target="_blank">here</a></h4>
       </div>
