--- a/_includes/home.html
+++ b/_includes/home.html
@@ -60,7 +60,7 @@
     <div class="card mb-3">
       <h3 class="card-header">Support me</h3>
       <div class="card-body">
-        <p class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a>, with <a href="https://paypal.me/eliabellussi" target="_blank">Paypal.Me</a>, with <strong>Bitcoin</strong>>: 1DLjo5sCqd4apSsVZoAJjccnrj6EryVDqT or <strong>Ethereum</strong>: 0x62eE0Fac81872409270E2dbc45eB486d4417081D</p>  
+        <p class="card-text">With <a href="https://pay.revolut.com/profile/elia3dcp" target="_blank">Revolut</a>, with <a href="https://paypal.me/eliabellussi" target="_blank">Paypal.Me</a>, with <strong>Bitcoin</strong>: 1DLjo5sCqd4apSsVZoAJjccnrj6EryVDqT or <strong>Ethereum</strong>: 0x62eE0Fac81872409270E2dbc45eB486d4417081D</p>  
       </div>
     </div>
   </div>
