--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,15 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <ul class="list-unstyled">
-          <li>
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
-              {{ site.title | escape }}
-            {%- endif -%}
-          </li>
-        </ul>
+        <p>{{ site.license | escape }}</p>
       </div>
     </div>
   </div>
