--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -108,3 +108,6 @@ $list-group-disabled-bg:            $gray-200 !default;
 
 $close-color:                       $gray-600 !default;
 $close-text-shadow:                 none !default;
+
+// Cards
+$min-height:                        200 !default;
