--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -110,4 +110,4 @@ $close-color:                       $gray-600 !default;
 $close-text-shadow:                 none !default;
 
 // Cards
-$min-height:                        300 !default;
+$cards-min-height:                        300 !default;
