--- a/_includes/home.html
+++ b/_includes/home.html
@@ -36,7 +36,7 @@
     <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
-        <h4 class="card-title">Impact Angels Italia</h4>
+        <h4 class="card-title">Angels4Impact Italia</h4>
         <p class="card-text">Evaluating and helping start-ups</p>
       </div>
     </div>
