--- a/_includes/home.html
+++ b/_includes/home.html
@@ -15,20 +15,20 @@
 </div>
 <div class="row">
   <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Business</div>
+      <div class="card-body">
+        <h4 class="card-title">Personal Activity</h4>
+        <p class="card-text">Mentorship at Italy for Tomorrow's Hackathon</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
       <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
         <h4 class="card-title">Almaviva</h4>
         <p class="card-text">Development of Architectural Solutions</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card mb-3">
-      <div class="card-header">Business</div>
-      <div class="card-body">
-        <h4 class="card-title">Personal Activity</h4>
-        <p class="card-text">Strategic Consultancy for Startup</p>
       </div>
     </div>
   </div>
