--- a/_includes/home.html
+++ b/_includes/home.html
@@ -19,7 +19,7 @@
       <div class="card-header">Business</div>
       <div class="card-body">
         <h4 class="card-title">Personal Activity</h4>
-        <p class="card-text">Mentorship at Italy of Tomorrow's Hackathon</p>
+        <p class="card-text">Mentorship at Italy of Tomorrow</p>
       </div>
     </div>
   </div>
