--- a/_includes/home.html
+++ b/_includes/home.html
@@ -18,8 +18,8 @@
     <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
-        <h4 class="card-title">Personal Activity</h4>
-        <p class="card-text">Mentorship at Hack4Cult</p>
+        <h4 class="card-title">Angels4Impact Italia</h4>
+        <p class="card-text">Evaluating and helping start-ups</p>
       </div>
     </div>
   </div>
@@ -27,7 +27,7 @@
       <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
-        <h4 class="card-title">Personal Activity</h4>
+        <h4 class="card-title"></h4>
         <p class="card-text">Mentorship at Italy of Tomorrow</p>
       </div>
     </div>
@@ -36,8 +36,8 @@
     <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
-        <h4 class="card-title">Angels4Impact Italia</h4>
-        <p class="card-text">Evaluating and helping start-ups</p>
+        <h4 class="card-title">Personal Activity</h4>
+        <p class="card-text">Mentorship at Hack4Cult</p>
       </div>
     </div>
   </div>
