--- a/_includes/home.html
+++ b/_includes/home.html
@@ -28,7 +28,7 @@
       <div class="card-header">Business</div>
       <div class="card-body">
         <h4 class="card-title">Startup Geeks</h4>
-        <p class="card-text">Mentorship at Italy of Tomorrow</p>
+        <p class="card-text">Mentorship for Startup Builder</p>
       </div>
     </div>
   </div>
