--- a/_includes/home.html
+++ b/_includes/home.html
@@ -18,8 +18,8 @@
     <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
-        <h4 class="card-title">Angels4Impact Italia</h4>
-        <p class="card-text">Evaluating and helping start-ups</p>
+        <h4 class="card-title">Teacher Assistant</h4>
+        <p class="card-text">Managing Information Systems</p>
       </div>
     </div>
   </div>
