--- a/_includes/home.html
+++ b/_includes/home.html
@@ -18,8 +18,17 @@
     <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
-        <h4 class="card-title">Teacher Assistant</h4>
-        <p class="card-text">Managing Information Systems</p>
+        <h4 class="card-title">Impact Hub Milano</h4>
+        <p class="card-text">Mentorship for start-ups</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Business</div>
+      <div class="card-body">
+        <h4 class="card-title">SAA - School of Management</h4>
+        <p class="card-text">Teacher Assistant - Managing Information Systems</p>
       </div>
     </div>
   </div>
@@ -29,15 +38,6 @@
       <div class="card-body">
         <h4 class="card-title">Startup Geeks</h4>
         <p class="card-text">Mentorship for Startup Builder</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card mb-3">
-      <div class="card-header">Business</div>
-      <div class="card-body">
-        <h4 class="card-title">Personal Activity</h4>
-        <p class="card-text">Mentorship at Hack4Cult</p>
       </div>
     </div>
   </div>
