--- a/_includes/home.html
+++ b/_includes/home.html
@@ -15,6 +15,15 @@
 </div>
 <div class="row">
   <div class="col-lg-4">
+      <div class="card mb-3">
+      <div class="card-header">Certification</div>
+      <div class="card-body">
+        <h4 class="card-title">Scrum.org</h4>
+        <p class="card-text">Professional Scrum Master I</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
@@ -29,15 +38,6 @@
       <div class="card-body">
         <h4 class="card-title">SAA - School of Management</h4>
         <p class="card-text">Teacher Assistant - Managing Information Systems</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4">
-      <div class="card mb-3">
-      <div class="card-header">Business</div>
-      <div class="card-body">
-        <h4 class="card-title">Startup Geeks</h4>
-        <p class="card-text">Mentorship for Startup Builder</p>
       </div>
     </div>
   </div>
