--- a/_includes/home.html
+++ b/_includes/home.html
@@ -15,6 +15,15 @@
 </div>
 <div class="row">
   <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Business</div>
+      <div class="card-body">
+        <h4 class="card-title">SIT PoliTo/PoliMi</h4>
+        <p class="card-text">Start-ups Mentoring</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
       <div class="card mb-3">
       <div class="card-header">Certification</div>
       <div class="card-body">
@@ -28,16 +37,7 @@
       <div class="card-header">Business</div>
       <div class="card-body">
         <h4 class="card-title">Impact Hub Milano</h4>
-        <p class="card-text">Mentorship for start-ups</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card mb-3">
-      <div class="card-header">Business</div>
-      <div class="card-body">
-        <h4 class="card-title">SAA - School of Management</h4>
-        <p class="card-text">Teacher Assistant - Managing Information Systems</p>
+        <p class="card-text">Start-ups Mentoring</p>
       </div>
     </div>
   </div>
