--- a/_includes/home.html
+++ b/_includes/home.html
@@ -18,7 +18,7 @@
     <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
-        <h4 class="card-title">SIT PoliTo/PoliMi</h4>
+        <h4 class="card-title">Social Innovation Team</h4>
         <p class="card-text">Start-ups Mentoring</p>
       </div>
     </div>
