--- a/_includes/home.html
+++ b/_includes/home.html
@@ -19,7 +19,7 @@
       <div class="card-header">Interview</div>
       <div class="card-body">
         <h4 class="card-title">Scaleapse</h4>
-        <p class="card-text">Startups' Mentoring</p>
+        <p class="card-text">Start-ups Mentoring</p>
       </div>
     </div>
   </div>
