--- a/_includes/home.html
+++ b/_includes/home.html
@@ -16,28 +16,28 @@
 <div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
-      <div class="card-header">Interview</div>
+      <div class="card-header">Certification</div>
       <div class="card-body">
-        <h4 class="card-title">Scaleapse</h4>
-        <p class="card-text">Start-ups Mentoring</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card mb-3">
-      <div class="card-header">Business</div>
-      <div class="card-body">
-        <h4 class="card-title">Social Innovation Team</h4>
-        <p class="card-text">Start-ups Mentoring</p>
+        <h4 class="card-title">ICO-CERT</h4>
+        <p class="card-text">27001:2022 Foundation</p>
       </div>
     </div>
   </div>
   <div class="col-lg-4">
       <div class="card mb-3">
+      <div class="card-header">Business</div>
+      <div class="card-body">
+        <h4 class="card-title">Empethy</h4>
+        <p class="card-text">Investing</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
       <div class="card-header">Certification</div>
       <div class="card-body">
-        <h4 class="card-title">Scrum.org</h4>
-        <p class="card-text">Professional Scrum Master I</p>
+        <h4 class="card-title">APMG</h4>
+        <p class="card-text">FitSM Advanced Service Planning and Delivery</p>
       </div>
     </div>
   </div>
